@@ -17,7 +17,7 @@
   <include package=".viewlets" />
   <include package=".portlets" />
   <include package=".content" />
-  <include package=".upgrades" />
+  <include file="permissions.zcml" />
 
 <include zcml:condition="installed ftw.lawgiver" file="lawgiver.zcml" />
 
@@ -31,6 +31,8 @@
       description=""
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
+
+  <include package=".upgrades" />
 
  <subscriber
       for=".interfaces.ISubsite
