@@ -1,13 +1,18 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:lawgiver="http://namespaces.zope.org/lawgiver"
-    i18n_domain="ftw.contentpage">
+    i18n_domain="ftw.subsite">
 
     <include package="ftw.lawgiver" file="meta.zcml" />
 
     <lawgiver:map_permissions
         action_group="add"
         permissions="ftw.subsite: Add Subsite"
+        />
+
+    <lawgiver:map_permissions
+        action_group="configure analytics per subsite"
+        permissions="ftw.subsite: Configure analytics"
         />
 
 </configure>
