@@ -1,0 +1,10 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="ftw.subsite">
+
+    <permission
+        id="ftw.subsite.ConfigureAnalytics"
+        title="ftw.subsite: Configure analytics"
+        />
+
+</configure>
