@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1002</version>
     <dependencies>
       <dependency>profile-plone.formwidget.contenttree:default</dependency>
     </dependencies>
