@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<rolemap>
+    <permissions>
+        <permission name="ftw.subsite: Configure analytics" acquire="True">
+            <role name="Manager"/>
+        </permission>
+    </permissions>
+</rolemap>
