@@ -4,7 +4,8 @@ Changelog
 1.4.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Configure Google Analytics tracking code per subsite.
+  [mbaechtold]
 
 
 1.4.3 (2015-10-29)
